g3-common: hwaddrs: Create and validate addresses
Validates the existing address files if they exist.  If not valid, try
reading the addresses from /misc.  If that address isn't valid, then
generate a random address.  Store a copy of the files in
/persist for persistance.

Change-Id: I111d7c90620ea601ef0f4665a9ed7de3e43637b7

--- a/rootdir/etc/init.g3.rc
+++ b/rootdir/etc/init.g3.rc
@@ -346,7 +346,7 @@ on property:vold.decrypt=trigger_restart_framework
 service hwaddrs /vendor/bin/hwaddrs
     class core
     user root
-    group bluetooth wifi
+    group sytem bluetooth
     oneshot
 
 service btinit-sh /vendor/bin/sh /vendor/bin/init.qcom.bt.sh
